k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-auth-service
  annotations:

        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
      labels:
    app: agri-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-auth-service
  template:
    metadata:
