k8s/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-product-service
  annotations:

        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/actuator/prometheus"
      labels:
    app: agri-product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-product-service
  template:
    metadata:
