k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-mongodb
  labels:
    app: agri-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-mongodb
  template:
    metadata:
      labels:
        app: agri-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        # En production, ne pas définir les mots de passe ici en clair.
        # Ici on définit un init basique intercepté par Vault ensuite
---
apiVersion: v1
kind: Service
metadata:
  name: agri-mongodb
spec:
  selector:
    app: agri-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
