k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agri-ingress
  namespace: devsecops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: agri-connect.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: agri-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agri-frontend
            port:
              number: 80
